# rasterframes

./: .gitignore  .jvmopts  .pre-commit-config.yaml  .sbtopts  .sbtrc  .scalafmt.conf  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  RELEASE.md  __init__.py  aggregation.html  aggregation.ipynb  aggregation.pymd  build.sbt  concepts.html  creating-rasterframes.html  description.html  description.ipynb  exporting-rasterframes.html  getting-started.html  getting-started.ipynb  index.html  ipython.html  languages.html  languages.ipynb  local-algebra.html  local-algebra.ipynb  machine-learning.html  masking.html  masking.pymd  nodata-handling.html  nodata-handling.ipynb  numpy-pandas.html  numpy-pandas.ipynb  (+35 more)
.circleci/: .dockerignore  Dockerfile  Makefile  README.md  config.yml  fix-permissions  requirements-conda.txt
.github/actions/collect_artefacts/: action.yml
.github/actions/init-python-env/: action.yaml
.github/actions/init-scala-env/: action.yaml
.github/actions/python_build/: action.yml
.github/actions/scala_build/: action.yml
.github/image/: Dockerfile  Makefile  requirements-conda.txt
.github/workflows/: build-test.yml  build.yml  build_python.yml  build_scala.yml  ci.yml  docs.yml
adhoc/: build.sbt
apps/: geotrellis-ops.html  index.html  ndvi.html
bench/: README.md  build.sbt
bench/archive/: jmh-results-20170929144835.json  jmh-results-20170929150147.json  jmh-results-20171003200608.json  jmh-results-20171003202234.json  jmh-results-20171003212812.json  jmh-results-20171003214013.json  jmh-results-20171004151912.json  jmh-results-20171005120900.json  jmh-results-20171010115418.json  jmh-results-20171010122119.json  jmh-results-20171130120731.json  jmh-results-20171130135353.json  jmh-results-20171130145409.json  jmh-results-20171201123901.json  jmh-results-20181018171118.json  jmh-results-20181019091958.json  jmh-results-20181019152408.json  jmh-results-20181218103620.json  jmh-results-20181218135228.json  jmh-results-20190114133019.json  jmh-results-20190114140654.json  jmh-results-20190121105031.json  jmh-results-20190131092910.json  jmh-results-20190206135840.json  jmh-results-20190207140524.json  jmh-results-20190224115207.json  jmh-results-20190528095237.json  jmh-results-20190528102317.json  jmh-results-20190606082738.json  jmh-results-20190606094001.json  jmh-results-20190912131522.json  jmh-results-20190912133231.json
core/: build.sbt
datasource/: build.sbt
deployment/: README.md  build.sbt
deployment/docker/jupyter/: Dockerfile  Getting Started with RasterFrames (scala).ipynb  Getting Started with RasterFrames.ipynb  README.md  docker-compose.yml
docs/: README.md  build.sbt  documentation-principles.md
experimental/: README.md  build.sbt
latest/api/: deprecated-list.html  index.html  index.js  package.html
latest/api/astraea/: package.html
latest/api/geotrellis/: package.html
latest/api/index/: index-_.html  index-a.html  index-b.html  index-c.html  index-d.html  index-e.html  index-f.html  index-g.html  index-h.html  index-i.html  index-j.html  index-k.html  index-l.html  index-m.html  index-n.html  index-o.html  index-p.html  (+10 more)
ml/: classification.html  clustering.html  index.html  statistics.html
project/: .gitignore  BenchmarkPlugin.scala  PIPBuildPlugin.scala  ProjectPlugin.scala  PythonBuildPlugin.scala  RFAssemblyPlugin.scala  RFDependenciesPlugin.scala  RFProjectPlugin.scala  RFReleasePlugin.scala  plugins.sbt
project/project/: plugins.sbt
pyrasterframes/: .gitignore  README.md  build.sbt  python-bindings.md
pyrasterframes/python/: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py
python/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
python/docs/: __init__.py  aggregation.pymd  build_docs.py  description.pymd  getting-started.pymd  ipython.pymd  languages.pymd  local-algebra.pymd  masking.pymd  nodata-handling.pymd  numpy-pandas.pymd  raster-catalogs.pymd  raster-join.pymd  raster-read.pymd  raster-write.pymd  supervised-learning.pymd  time-series.pymd  unsupervised-learning.pymd  vector-data.pymd  zonal-algebra.pymd
python/geomesa_pyspark/: types.py
python/pyrasterframes/: __init__.py  rasterfunctions.py  rf_context.py  rf_ipython.py  rf_types.py  utils.py  version.py
python/scripts/: build_docs.py
python/tests/: ExploderTests.py  GeoTiffWriterTests.py  GeotrellisTests.py  IpythonTests.py  NoDataFilterTests.py  PyRasterFramesTests.py  RasterFunctionsTests.py  RasterSourceTest.py  UDTTests.py  VectorTypesTests.py  VersionTests.py  __init__.py  conftest.py  coverage-report.sh
python/tests/resources/: buildings.geojson
rf-notebook/: README.md  build.sbt
search/: search_index.json
static/: __cuya__.html  cuya.html  df-samples-output.html  rasterframe-sample.html
tour/: RasterFrames.txt  init.scala  show.sh
workshop/: build.sbt
(+2279 files in other folders)
