[tool.poetry]
name = "pyrasterframes"
version = "10.2"
authors = ["Astraea, Inc. <info@astraea.earth>"]
description = "Access and process geospatial raster data in PySpark DataFrames"
homepage = "https://rasterframes.io"
license = "Apache-2.0"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Other Environment",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
packages = [
    { include = "geomesa_pyspark" },
    { include = "pyrasterframes" },
]


[tool.poetry.dependencies]
python = ">=3.8"
shapely = "^2.0.0"
pyproj = "^3.4.1"
deprecation = "^2.1.0"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
py4j = "^0.10.9.3"
pyspark = "3.2.1"
numpy = "^1.24.1"
mypy = "^0.991"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
wheel = "^0.38.4"
rasterio = {extras = ["s3"], version = "^1.3.4"}
ipython = "^8.7.0"
pweave = "^0.30.3"
ipython-genutils = "^0.2.0"
typer = "^0.7.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]
python_files = "*.py"


[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
